<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/ont"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/main_title"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/spotify_streamer_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#F08C35"
        android:text="@string/spotify_streamer_text"
        android:onClick="launchSpotifyStreamer"/>

    <Button
        android:id="@+id/scores_app_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#F08C35"
        android:text="@string/scores_app_text"
        android:onClick="launchScoresApp"/>

    <Button
        android:id="@+id/library_app_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:text="@string/library_app_text"
        android:onClick="launchLibraryApp"/>

    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:text="@string/build_it_bigger_text"
        android:onClick="launchBuildItBigger"/>

    <Button
        android:id="@+id/xyz_reader_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:text="@string/xyz_reader_text"
        android:onClick="launchXyzReader"/>

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:text="@string/capstone_text"
        android:onClick="launchCapstone"/>

</LinearLayout>
